kubernetes/apps/default/authentik/httproute.yaml
---
# yaml-language-server: $schema=https://github.com/datreeio/CRDs-catalog/raw/refs/heads/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
spec:
  hostnames: ["auth-test.${SECRET_DOMAIN}"]
  parentRefs:
  - name: external
    namespace: network
    sectionName: https
  rules:
  - backendRefs:
    - name: authentik-server
      namespace: default
      port: 80
